--- a/mobuleb/src/main/res/layout/activity_module_b.xml
+++ b/mobuleb/src/main/res/layout/activity_module_b.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ModuleBActivity">
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Module B 页面"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
