--- a/modulea/src/main/res/layout/activity_module_a.xml
+++ b/modulea/src/main/res/layout/activity_module_a.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ModuleAActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Module A 页面"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
